2009-10-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Added a background-clip parsing test that would have caught some
        regressions that were introduced in r46240.

        * fast/css/background-clip-text-expected.txt: Added.
        * fast/css/background-clip-text.html: Added.
        * fast/css/script-tests: Added.
        * fast/css/script-tests/TEMPLATE.html: Copied from LayoutTests/fast/backgrounds/repeat/script-tests/TEMPLATE.html.
        * fast/css/script-tests/background-clip-text.js: Added.
        (test):

2009-10-21  Xan Lopez  <xlopez@igalia.com>

        Skip another failing test.

        * platform/gtk/Skipped:

2009-10-21  Xan Lopez  <xlopez@igalia.com>

        Skip a few more libxml2 related tests.

        * platform/gtk/Skipped:

2009-10-21  Satoshi Nakagawa  <psychs@limechat.net>

        Reviewed by Darin Adler.

        Fixed Japanese text search problems.
        Treat small kana letters and kana letters as different characters in search.
        Do not ignore diacritic marks in search for Japanese texts.

        https://bugs.webkit.org/show_bug.cgi?id=30437

        * fast/text/international/japanese-kana-letters-expected.txt: Added.
        * fast/text/international/japanese-kana-letters.html: Added.

2009-10-20  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: simple console tests do not require testing harness.

        https://bugs.webkit.org/show_bug.cgi?id=30478

        * inspector/uncaught-dom1-exception-expected.txt:
        * inspector/uncaught-dom1-exception.html:
        * inspector/uncaught-dom3-exception-expected.txt:
        * inspector/uncaught-dom3-exception.html:
        * inspector/uncaught-dom8-exception-expected.txt:
        * inspector/uncaught-dom8-exception.html:

2009-10-20  Xan Lopez  <xlopez@igalia.com>

        Another batch of skipped tests with links to their bugs.

        * platform/gtk/Skipped:
