@@ -1,0 +1,26 @@
+<script>
+function handleEvent(message) {
+    document.getElementById("log").innerHTML = "FAIL: " + message + " handled.<br>";
+}
+
+function test() {
+    if (window.layoutTestController) {
+        layoutTestController.dumpAsText();
+    }
+
+    var doctype = document.implementation.createDocumentType(
+        'html',
+        '-//W3C//DTD XHTML 1.0 Strict//EN',
+        'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'
+    );
+
+    var evt = document.createEvent("Event");
+    evt.initEvent("generic", true, true);
+    doctype.addEventListener("generic", function () { handleEvent("generic")}, false);
+    doctype.dispatchEvent(evt);
+}
+</script>
+<body onload="test()">
+<p>The test verifies that EventTarget with an event listener but without ScriptExecutionContext (not inserted into Document) does not crash during an attempt to dispatch an event. It should just not call the handler. This is what FF 3.5 is also doing.</p>
+<p>Test passes if there is no crash, and event is not dispatched.</p>
+<div id="log">PASS</div>
